# irish-mcp-gateway

./: .dockerignore  .editorconfig  .gitignore  ADMIN.md  Cargo.toml  Dockerfile  Makefile  README.md  integration-test-findings.md  lcov.info  rmcp-findings.md  tooling-config.example.toml
.github/workflows/: ci.yml
docs/tools/: grammar.check.md  spell.check.md
scripts/: acceptance.sh
src/: lib.rs  main.rs
src/api/: mcp.rs  mcp2.rs  mod.rs
src/cli/: mod.rs
src/clients/: gaelspell.rs  gramadoir.rs  mod.rs
src/core/: content.rs  error.rs  mcp.rs  mod.rs  tool.rs
src/domain/: mod.rs
src/infra/: boot.rs  config.rs  http_app.rs  logging.rs  mcp.rs  mod.rs
src/infra/http/: headers.rs  json.rs  mod.rs  sse.rs
src/infra/runtime/: limits.rs  mcp_transport.rs  mod.rs  session.rs
src/tools/: grammar.rs  hello.rs  mcp_router.rs  mod.rs  registry.rs  registry2.rs
src/tools/grammar/: tool_router.rs
src/tools/grammar_new/: local.rs  mod.rs  remote.rs
src/tools/spellcheck/: local.rs  mod.rs  remote.rs
tests/: test_api_http_integration.rs  test_api_http_integration2.rs  test_mcp_http_integration.rs
