[package]
name = "irish-mcp-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
rmcp = { version = "0.5", features = [
  "server",
  "macros",
  "transport-io",
  "server-side-http",
  "tower",
  "transport-streamable-http-server",
  "transport-streamable-http-server-session",
  "transport-worker"
] }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
hyper = "1"
serde_json = "1"
