[package]
name = "irish-mcp-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
metrics = "0.23"
async-trait = "0.1"
rmcp = { version = "0.5", features = [
  "server",
  "macros",
  "transport-io",
  "server-side-http",
  "tower",
  "transport-streamable-http-server",
  "transport-streamable-http-server-session",
  "transport-worker"
] }
http-body-util = "0.1.3"
hyper = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serial_test = "2"
